--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 bin/
 .ycm_extra_conf.py
 .ycm_extra_conf.pyc
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Makefile
-cmake_install.cmake
-install_manifest.txt
+build
