--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set (SRC ${PROJECT_SOURCE_DIR}/src)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic -std=c++11 -O2 -g -I${SRC}")
 
 add_subdirectory (tst)
+add_subdirectory (src_main)
