Undirected graph is now the default one.

--- a/src_main/CMakeLists.txt
+++ b/src_main/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable (conn_pairs
     cp.cpp
     ${SRC}/connectivity_pairs.cpp
+    ${SRC}/graph_common.cpp
     ${SRC}/load_graph.cpp
     ${SRC}/path.cpp
 )
