--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable (test_all
     ${TEST_SUITES}
     extraordinary_graphs.cpp
     ${SRC}/edge_connectivity.cpp
+    ${SRC}/graph_common.cpp
     ${SRC}/flow.cpp
     ${SRC}/load_graph.cpp
     ${SRC}/mixed_paths.cpp
