Added dotify program

--- a/src_main/CMakeLists.txt
+++ b/src_main/CMakeLists.txt
@@ -5,3 +5,10 @@ add_executable (conn_pairs
     ${SRC}/load_graph.cpp
     ${SRC}/path.cpp
 )
+
+add_executable (dotify
+    dotify.cpp
+    ${SRC}/load_graph.cpp
+    ${SRC}/graph_common.cpp
+    ${SRC}/print_dot.cpp
+)
