Added performance tests for mixed paths

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -1,9 +1,5 @@
-SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DDEBUG")
-
-FILE(GLOB TEST_SUITES test_*.cpp)
-add_executable (test_all
+set(SOURCES
     run.cpp
-    ${TEST_SUITES}
     extraordinary_graphs.cpp
     ${SRC}/edge_connectivity.cpp
     ${SRC}/graph_common.cpp
@@ -11,5 +7,18 @@ add_executable (test_all
     ${SRC}/load_graph.cpp
     ${SRC}/mixed_paths.cpp
     ${SRC}/connectivity_pairs.cpp
-    ${SRC}/path.cpp
+    ${SRC}/path.cpp)
+
+
+file(GLOB TEST_SUITES test_*.cpp)
+add_executable (test_all
+    ${TEST_SUITES}
+    ${SOURCES}
+)
+set_target_properties(test_all PROPERTIES COMPILE_FLAGS "-DDEBUG")
+
+file(GLOB PERF_TEST_SUITES perf_test_*.cpp)
+add_executable (test_perf
+    ${PERF_TEST_SUITES}
+    ${SOURCES}
 )
