Introduced process_graph_dataset as a common mechanism for creating main executables.

--- a/src_main/CMakeLists.txt
+++ b/src_main/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable (conn_pairs
     cp.cpp
+    process_graph_dataset.cpp
     ${SRC}/connectivity_pairs.cpp
     ${SRC}/graph_common.cpp
     ${SRC}/load_graph.cpp
