Theorem checker (first version, basically a working draft)

--- a/src_main/CMakeLists.txt
+++ b/src_main/CMakeLists.txt
@@ -13,3 +13,14 @@ add_executable (dotify
     ${SRC}/graph_common.cpp
     ${SRC}/print_dot.cpp
 )
+
+add_executable (theorem_checker
+    theorem_checker.cpp
+    ${SRC}/load_graph.cpp
+    ${SRC}/graph_common.cpp
+    ${SRC}/connectivity_pairs.cpp
+    ${SRC}/edge_connectivity.cpp
+    ${SRC}/flow.cpp
+    ${SRC}/path.cpp
+    ${SRC}/mixed_paths.cpp
+)
