--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ bin/
 .ycm_extra_conf.py
 .ycm_extra_conf.pyc
 build
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+CTestTestfile.cmake
