--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project (Menger)
 
 set (SRC ${PROJECT_SOURCE_DIR}/src)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -std=c++11 -O2 -g -I${SRC}")
+set (CMAKE_EXECUTABLE_SUFFIX ".out")
 
 add_subdirectory (tst)
 add_subdirectory (src_main)
